--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
   <meta name="description" content="Web site RSPAD Gatot Soebroto" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoweb.ico" />
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"> -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
